
09-07-2018
	- Aggiunta la possibilità di scaricare i TestCase nella pagina del problema, se questi sono stati abilitati dal Professore
		- Modificata "contest.jsp", "contest.css", "ContestController"
	- Aggiunta l'eliminazione di un Problema in back-end
		- Modificato "ProblemController", "Problem" (aggiunto le Submits per eliminazione in Cascade)
	- Aggiunta possibilità di modificare un Problema (front-end e chiamate Ajax back-end)
		- Modificato "ProblemController", "ProblemDAO", "ProblemDAOImpl", "Problem", "myproblems.jsp" (e script), "navbarTearcher.jsp"

10-07-2018
	- Fix modifica Problema
	- Aggiunta possibilità di clonare un Problema esistente in un altro Contest
		- Modificato "myproblems"
		- Modificato "ProblemController", ordinata la funzione e ottimizzato codice ripetuto
		- Modificato "myProblemsStyle" e "myProblemsScript"
		- Modificata "navbarTearcher" (valore di default per il timeout impostato a 5)
	- Fixato bug in "contest" per cui non si riusciva a visualizzare i problemi con più di uno spazio
		- Modificato "contest.js" (RegEx in .replace)

11-07-2018
	- Aggiunta possibiltà di vedere le Submit dei Problemi, divise per Team
		- Modicato "ProblemController"
		- Creata "viewProblemSubmits"
	- Aggiunta possibilità di vedere la singola Submit per un Problema, guardando il codice e con la possibilità di scaricarlo
		- Creata "viewSubmit"
		- Utilizzata libreria prismJS
	- Aggiunta possibilità di scaricare le proprie Submit (Student) dalla Home

13-07-2018
	- Creata Vista per il Team, consente al Prof di vedere le Sottomissioni di quel Team per i propri Problemi
		- Modificato "TeamController", "SubmitDAO", "SubmitDAOImpl", "TagDAOImpl"
		- Creata "viewTeam.jsp" (e CSS), modificato "teamviews.jsp", "viewProblemSubmit.jsp" e "viewSubmit.jsp"
	- Aggiunti Submit alla Vista "contest.jsp" dei Problemi
		- Modificato "ProblemController", "contest.jsp"
	- Creata Vista per creare un Quiz
		- Creata "createQuiz.jsp" (JS e CSS)
	
	
	
	
	