@@ -1,9 +1,11 @@
 package it.unical.controllers;
 
 import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
+import java.util.Set;
 
 import javax.servlet.http.HttpServletResponse;
 import javax.servlet.http.HttpSession;
@@ -33,43 +35,49 @@ import it.unical.forms.QuizDTO;
 import it.unical.utils.SessionUtils;
 
 @Controller
-public class QuizController {
+public class QuizController
+{
 	private static final Logger logger = LoggerFactory.getLogger(LogInController.class);
 
 	@Autowired
 	private WebApplicationContext context;
 
-	private void _setAccountAttribute(final HttpSession session, final Model model) {
-		if (SessionUtils.isUser(session)) {
+	private void _setAccountAttribute(final HttpSession session, final Model model)
+	{
+		if (SessionUtils.isUser(session))
+		{
 			final UserDAO userDAO = (UserDAO) context.getBean("userDAO");
 			final User user = userDAO.get(SessionUtils.getUserIdFromSessionOrNull(session));
 			model.addAttribute("user", user);
 			model.addAttribute("typeSession", "Account");
 			model.addAttribute("userLogged", true);
-		} else
+		}
+		else
 			model.addAttribute("typeSession", "Login");
 	}
 
 	@RequestMapping(value = "/addQuiz", method = RequestMethod.POST)
 	public String addQuiz(final HttpSession session, @RequestBody QuizDTO quizDTO, final Model model,
-			HttpServletResponse response) {
+			HttpServletResponse response)
+	{
 		_setAccountAttribute(session, model);
 		final ContestDAO contestDAO = (ContestDAO) context.getBean("contestDAO");
 		final QuizDAO quizDAO = (QuizDAO) context.getBean("quizDAO");
 		final QuestionDAO questionDAO = (QuestionDAO) context.getBean("questionDAO");
 		final AnswerDAO answerDAO = (AnswerDAO) context.getBean("answerDAO");
 		final Contest contest = contestDAO.getContestByName(quizDTO.getContestName());
-		//create quiz
+		// create quiz
 		final Quiz quiz = new Quiz();
 		quiz.setContest(contest);
 		quiz.setName(quizDTO.getQuizName());
 		quiz.setPoints(quizDTO.getQuizPoints());
 		quizDAO.create(quiz);
-		//create questions
-		final List<Question> questions = new ArrayList<>();
+		// create questions
+		final Set<Question> questions = new HashSet<>();
 		final List<Quiz> quizs = new ArrayList<>();
 		quizs.add(quiz);
-		for (int i = 0; i < quizDTO.getQuestions().size(); i++) {
+		for (int i = 0; i < quizDTO.getQuestions().size(); i++)
+		{
 			final Question question = new Question();
 			question.setPoints(quizDTO.getPoints().get(i));
 			question.setText(quizDTO.getQuestions().get(i));
@@ -78,21 +86,35 @@ public class QuizController {
 			questionDAO.create(question);
 			questions.add(question);
 		}
-		//update quiz
+		// update quiz
 		quiz.setQuestions(questions);
 		quizDAO.update(quiz);
-		
+
 		int indexCorrectAnswer = -1;
-		for (final Entry<String, List<String>> entry : quizDTO.getQuestions_answers().entrySet()) {
+		for (final Entry<String, List<String>> entry : quizDTO.getQuestions_answers().entrySet())
+		{
 			Question findQuestion = null;
-			for (int i = 0; i < questions.size(); i++)
-				if (questions.get(i).getText().equals(entry.getKey())) {
-					findQuestion = questions.get(i);
+			int i = 0;
+			for (final Question question : questions)
+			{
+				if (question.getText().equals(entry.getKey()))
+				{
+					findQuestion = question;
 					indexCorrectAnswer = i;
 					break;
 				}
-			final List<Answer> answers = new ArrayList<>();
-			for (final String textAnswer : entry.getValue()) {
+				i++;
+			}
+			// for (int i = 0; i < questions.size(); i++)
+			// if (questions.get(i).getText().equals(entry.getKey()))
+			// {
+			// findQuestion = questions.get(i);
+			// indexCorrectAnswer = i;
+			// break;
+			// }
+			final Set<Answer> answers = new HashSet<>();
+			for (final String textAnswer : entry.getValue())
+			{
 				Answer answer = new Answer();
 				answer.setText(textAnswer);
 				if (!answerDAO.exists(textAnswer))
@@ -110,7 +132,8 @@ public class QuizController {
 	}
 
 	@RequestMapping(value = "/addQuizFake", method = RequestMethod.POST)
-	public String addQuizFake(final HttpSession session, @RequestBody QuizDTO quiz, final Model model) {
+	public String addQuizFake(final HttpSession session, @RequestBody QuizDTO quiz, final Model model)
+	{
 		System.out.println(quiz.getContestName());
 		System.out.println(quiz.getQuizName());
 		System.out.println(quiz.getQuizPoints());
@@ -133,7 +156,8 @@ public class QuizController {
 	}
 
 	@RequestMapping(value = "/createQuiz", method = RequestMethod.GET)
-	public String createQuiz(HttpSession session, Model model) {
+	public String createQuiz(HttpSession session, Model model)
+	{
 		_setAccountAttribute(session, model);
 		final User user = (User) model.asMap().get("user");
 
@@ -143,8 +167,10 @@ public class QuizController {
 			return "createQuiz";
 	}
 
-	private Question.Type getType(String typeFrontEnd) {
-		switch (typeFrontEnd) {
+	private Question.Type getType(String typeFrontEnd)
+	{
+		switch (typeFrontEnd)
+		{
 		case "closed":
 			return Type.MULTIPLE;
 		case "open":
